--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -63,7 +63,30 @@ body {
 
 .welcome {
   color: white;
+  display: inline;
+  width: 300px;
+}
+
+.join-game-container {
+  padding-top: 20px;
+}
+
+.join-game-container * {
+  display: inline;
+}
+
+.open-games {
+  margin-left: 30px;
+}
+
+.join-game-btn {
+  display: inline;
   float: right;
+  margin: 0 10px 20px 0;
+}
+
+.turn-display, .turn {
+  display: inline;
 }
 
 .booyah-box {
@@ -73,7 +96,6 @@ body {
   background: #fff;
   border: 1px solid  #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  margin: 10px 20px 15px 20px;
   padding: 20px
 }
