Improve turn logic and turn UI

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -67,6 +67,11 @@ body {
   width: 300px;
 }
 
+.resume-games {
+  margin-left: 30px;
+  margin-top: 10px;
+}
+
 .join-game-container {
   padding-top: 20px;
 }
