--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-  background: url('/assets/cork-wallet.png');
+  background: image_url('cork-wallet.png');
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
 }
 
@@ -16,7 +16,7 @@ body {
 }
 
 .navbar.navbar-inverse {
-  background: url('/assets/dark_embroidery.png');
+  background: image_url('dark_embroidery.png');
   border-radius: 0;
   box-shadow: 0px 1px 3px #2a2a2a;
   margin-bottom: 0;
